proc-macros/tests/ui/incorrect/sub/sub_async.stderr
error: Subscription methods must not be `async`
 --> $DIR/sub_async.rs:6:2
  |
6 | /     #[subscription(name = "sub", unsub = "unsub", item = u8)]
7 | |     async fn sub(&self);
  | |________________________^
